Fixed mobile overflow bug, began user homepage layout and styles

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -7,7 +7,6 @@
     text-align: center;
     padding-top: 2%;
     padding-bottom: 2%;
-    margin-top: 1%;
     font-size: 75%;
     font-weight: bold;
     color: white;
